syntax = "proto3";

package config.v1;

option cc_enable_arenas = true;
option go_package = "github.com/origadmin/runtime/api/gen/go/config/v1;configv1";
option java_multiple_files = true;
option java_outer_classname = "TlsConfigProto";
option java_package = "com.github.origadmin.api.runtime.config.v1";
option objc_class_prefix = "ORC";

// TLSConfig
message TLSConfig {
  message File {
    string cert = 1;
    string key = 2;
    string ca = 3;
  }

  message PEM {
    bytes cert = 1;
    bytes key = 2;
    bytes ca = 3;
  }

  // Whether TLS is enabled
  bool enabled = 1 [json_name = "enabled"];

  // Certificate configuration
  oneof config {
    // File path method
    File file = 2 [json_name = "file"];
    // Directly inline PEM data
    PEM pem = 3 [json_name = "pem"];
  }

  // Minimum TLS version
  // Optional values: "1.0", "1.1", "1.2", "1.3"
  string min_version = 4 [json_name = "min_version"];

  // Cipher suites
  repeated string cipher_suites = 5 [json_name = "cipher_suites"];

  // Whether a client certificate is required
  bool require_client_cert = 6 [json_name = "require_client_cert"];

  // Client CA certificate to validate client certificates
  string client_ca_file = 7 [json_name = "client_ca_file"];
}
